tests/golden/type_errors/typed_array_index_read_mismatch.cd
let xs: [number] = [1];
let s: string = xs[0];
